--- a/option2_terminattr_multi_cluster.yaml
+++ b/option2_terminattr_multi_cluster.yaml
@@ -4,11 +4,11 @@
   connection: local
   gather_facts: no
   vars:
-    cvaas_api: https://www.cv-staging.corp.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('env', 'CVAAS_TOKEN')}}"
-    cvp_device_api: "https://10.83.12.79/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('env', 'ON_PREM_TOKEN')}}"
-    cvp_token_api: "https://10.83.12.79/cvpservice/enroll/createToken"
+    cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
+    cvaas_token: "{{lookup('file', 'cvaas.tok')}}"
+    cvp_device_api: "https://192.168.0.5/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
+    cvp_token: "{{lookup('file', 'ACT_FOX_CVP.tok')}}"
+    cvp_token_api: "https://192.168.0.5/cvpservice/enroll/createToken"
   tasks:
   - name: "Generating TerminAttr onboarding token on CVaaS instance"
     tags: [build]
@@ -101,7 +101,7 @@
 - hosts: onprem_devices
   vars:
     ansible_user: cvpadmin
-    ansible_password: arastra
+    ansible_password: arista123
     ansible_connection: network_cli
     ansible_httpapi_use_ssl: True
     ansible_httpapi_validate_certs: False
@@ -126,6 +126,6 @@
         - "enable"
         - "config"
         - "daemon TerminAttr"
-        - "exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.cv-staging.corp.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt cvaas.vrf=MGMT  -cvopt dublin.addr=10.83.12.79:9910 -cvopt dublin.auth=token,/tmp/token -cvopt dublin.vrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs"
+        - "exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt -cvopt onprem.addr=192.168.0.5:9910 -cvopt onprem.auth=token,/tmp/token -cvopt -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs -disableaaa"
         - "shut"
         - "no shut"
