--- a/option2_cvaas_migration.yaml
+++ b/option2_cvaas_migration.yaml
@@ -6,10 +6,10 @@
   connection: local
   gather_facts: no
   vars:
-    cvaas_api: https://www.cv-staging.corp.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('env', 'CVAAS_TOKEN')}}"
-    cvp_device_api: "https://10.83.12.79/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('env', 'ON_PREM_TOKEN')}}"
+    cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
+    cvaas_token: "{{lookup('env', './tokens/cvaas.tok')}}"
+    cvp_device_api: "https://192.168.0.5/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
+    cvp_token: "{{lookup('env', './tokens/ACT_FOX_CVP.tok')}}"
   tasks:
   - name: 'Collect devices facts from {{inventory_hostname}}'
     tags: [facts, phase1]
@@ -28,7 +28,7 @@
     documentation_dir: "documentation"
   tasks:
   - name: Create required output directories if not present
-    tags: [build, provision]
+    tags: [facts]
     file:
       path: "{{ item }}"
       state: directory
