--- a/option2_terminattr_multi_cluster.yaml
+++ b/option2_terminattr_multi_cluster.yaml
@@ -5,9 +5,9 @@
   gather_facts: no
   vars:
     cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('file', 'cvaas.tok')}}"
+    cvaas_token: "{{lookup('file', './tokens/cvaas.tok')}}"
     cvp_device_api: "https://192.168.0.5/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('file', 'ACT_FOX_CVP.tok')}}"
+    cvp_token: "{{lookup('file', './tokens/ACT_FOX_CVP.tok')}}"
     cvp_token_api: "https://192.168.0.5/cvpservice/enroll/createToken"
   tasks:
   - name: "Generating TerminAttr onboarding token on CVaaS instance"
@@ -100,7 +100,7 @@
 
 - hosts: onprem_devices
   vars:
-    ansible_user: cvpadmin
+    ansible_user: cvpadmin #make sure this user has privilege for scp (aaa authorization exec ...)
     ansible_password: arista123
     ansible_connection: network_cli
     ansible_httpapi_use_ssl: True
@@ -126,6 +126,6 @@
         - "enable"
         - "config"
         - "daemon TerminAttr"
-        - "exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt -cvopt onprem.addr=192.168.0.5:9910 -cvopt onprem.auth=token,/tmp/token -cvopt -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs -disableaaa"
+        - "exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt onprem.addr=192.168.0.5:9910 -cvopt onprem.auth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs -disableaaa"
         - "shut"
         - "no shut"
