initial commit june 2023

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,6 +6,7 @@ gathering = explicit
 retry_files_enabled = False
 filter_plugins = /home/avd/ansible-avd/plugins/filters
 roles_path = roles
+collections_paths = ../ansible-cvp:~/.ansible/collections:/usr/share/ansible/collections
 #collections_paths = /Users/tamas/go/src/github.com/noredistribution/ansible-cvp/:/home/avd/.ansible/collections:/Users/tamas/go/src/github.com/ansible-avd:/Users/tamas/go/src/github.com/ansible-cvp
 action_plugins = /usr/lib/python2.7/site-packages/napalm_ansible/plugins/action
 jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
