--- a/terminattr_multi_cluster.cfg
+++ b/terminattr_multi_cluster.cfg
@@ -1,4 +1,4 @@
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt onprem.addr=192.168.0.5:9910 -cvopt onprem.auth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs -disableaaa
+   exec /usr/bin/TerminAttr -cvopt cvaas.addr=apiserver.arista.io:443 -cvopt cvaas.auth=token-secure,/tmp/cv-onboarding-token -cvopt onprem.addr=192.168.0.5:9910 -cvopt onprem.auth=token,/tmp/token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs -disableaaa
    no shutdown
 !
