--- a/option2_cvaas_migration.yaml
+++ b/option2_cvaas_migration.yaml
@@ -2,14 +2,14 @@
 # Author: Tamas Plugor - EMEA
 ---
 - name: "Fetch CV on-prem device inventory and generate CVaaS onboarding token"
-  hosts: cv_server
+  hosts: ACT_CVP
   connection: local
   gather_facts: no
   vars:
     cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('env', './tokens/cvaas.tok')}}"
-    cvp_device_api: "https://192.168.0.5/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('env', './tokens/ACT_FOX_CVP.tok')}}"
+    cvaas_token: "{{lookup('file', '~/cvaas_arista_ce_canada.tok')}}"
+    cvp_device_api: "https://10.18.156.165/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
+    cvp_token: "{{lookup('file', '~/ACT_AVD_CI_EXTENDED.tok')}}"
   tasks:
   - name: 'Collect devices facts from {{inventory_hostname}}'
     tags: [facts, phase1]
@@ -42,19 +42,19 @@
   - name: "Writing on-prem device facts from {{inventory_hostname}} to file"
     tags: [facts]
     copy:
-      content: "{{ hostvars['cv_server'].facts_devices.data.cvp_devices |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
+      content: "{{ hostvars['ACT_CVP'].facts_devices.data.cvp_devices |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_devices.yaml"
     delegate_to: localhost
   - name: "Writing on-prem container facts from {{inventory_hostname}} to file"
     tags: [facts]
     copy:
-      content: "{{ hostvars['cv_server'].facts_devices.data.cvp_containers |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
+      content: "{{ hostvars['ACT_CVP'].facts_devices.data.cvp_containers |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_containers.yaml"
     delegate_to: localhost
   - name: "Writing on-prem configlet facts from {{inventory_hostname}} to file"
     tags: [facts]
     copy:
-      content: "{{ hostvars['cv_server'].facts_devices.data.cvp_configlets |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
+      content: "{{ hostvars['ACT_CVP'].facts_devices.data.cvp_configlets |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_configlets.yaml"
     delegate_to: localhost
 
@@ -69,7 +69,7 @@
   - name: "Upload configlets to {{inventory_hostname}}"
     tags: [cvaas, phase2]
     arista.cvp.cv_configlet_v3:
-      configlets: "{{hostvars['cv_server'].facts_devices.data.cvp_configlets}}"
+      configlets: "{{hostvars['ACT_CVP'].facts_devices.data.cvp_configlets}}"
       state: present
     delegate_to: cvaas
   - name: "Upload new TerminAttr configlet to {{inventory_hostname}}"
@@ -82,7 +82,7 @@
     tags: [cvaas, phase2]
     set_fact:
       new_devices_var: |
-        {% set res = hostvars['cv_server'].facts_devices.data.cvp_devices -%}
+        {% set res = hostvars['ACT_CVP'].facts_devices.data.cvp_devices -%}
         {% for device in res -%}
         {%     do device.configlets.append("terminattr_config_cvaas") -%}
         {%- endfor %}
@@ -90,7 +90,7 @@
   - name: "Generate container hierarchy"
     tags: [cvaas, phase2]
     arista.cvp.cv_container_v3:
-        topology: "{{hostvars['cv_server'].facts_devices.data.cvp_containers}}"
+        topology: "{{hostvars['ACT_CVP'].facts_devices.data.cvp_containers}}"
         state: present
   - name: "Move devices to target containers and assign configlets"
     tags: [cvaas, phase2]
