--- a/cvaas_migrationV2.yaml
+++ b/cvaas_migrationV2.yaml
@@ -6,13 +6,13 @@
   connection: local
   gather_facts: no
   vars:
-    cvaas_api: https://www.cv-staging.corp.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('env', 'CVAAS_TOKEN')}}"
-    cvp_device_api: "https://10.83.12.178/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('env', 'ON_PREM_TOKEN')}}"
+    cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
+    cvaas_token: "{{lookup('file', '~/cvaas_arista_ce_canada.tok')}}"
+    cvp_device_api: "https://10.18.156.165/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
+    cvp_token: "{{lookup('file', '~/ACT_AVD_CI_EXTENDED.tok')}}"
   tasks:
   - name: 'Collect devices facts from {{inventory_hostname}}'
-    tags: [facts, phase1]
+    tags: [ facts ]
     arista.cvp.cv_facts_v3:
       facts:
         - devices
@@ -20,7 +20,7 @@
         - containers
     register: facts_devices
   - name: "Get Current Device Inventory Data From CVP REST API"
-    tags: [build, phase1, devinv]
+    tags: [ facts ]
     ansible.builtin.uri:
       url: "{{ cvp_device_api }}"
       method: GET
@@ -35,29 +35,29 @@
     delay: 2
   # Build list of device IPs from the inventory REST API call
   - name: "Building list of IP addresses"
-    tags: [build, phase1, devinv]
+    tags: [ facts ]
     set_fact:
       device_inventory: "{{ device_inventory | default([]) + [item.ipAddress] }}"
     with_items: "{{ current_cvp_devices_api_result.content  }}"
   - name: Concatenating device_inventory
-    tags: [build, phase1]
+    tags: [ facts ]
     set_fact:
       device_inventory_list: "{{ device_inventory | join('\n') }}"
   - name: "Building temporary device inventory"
-    tags: [build, phase1, devinv]
+    tags: [ facts ]
     copy:
       content: "{{ device_inventory_list }}"
       dest: "./inventory/onprem_devices.yaml"
     delegate_to: localhost
   - name: "Update onprem_devices.yaml file with group tag..."
-    tags: [build, phase1, devinv]
+    tags: [ facts ]
     lineinfile:
       path: "./inventory/onprem_devices.yaml"
       line: '[onprem_devices]'
       insertbefore: BOF
 
   - name: "Generating TerminAttr onboarding token on CVaaS instance"
-    tags: [build, phase1]
+    tags: [ facts ]
     ansible.builtin.uri:
       url: "{{ cvaas_api }}"
       method: POST
@@ -73,11 +73,11 @@
     delay: 2
   # Writing cvaas token to file
   - name: "Parsing CVaaS token"
-    tags: [build, phase1]
+    tags: [ facts ]
     set_fact:
       cv_onboarding_token: "{{ cv_onboarding_token.content | list | join }}"
   - name: "Writing CVaaS token to file"
-    tags: [phase1]
+    tags: [ facts ]
     copy:
       content: "{{ cv_onboarding_token[0].enrollmentToken.token }}"
       dest: "./cv-onboarding-token"
@@ -90,7 +90,7 @@
     documentation_dir: "documentation"
   tasks:
   - name: Create required output directories if not present
-    tags: [build, provision, phase1]
+    tags: [ facts ]
     file:
       path: "{{ item }}"
       state: directory
@@ -102,29 +102,29 @@
     run_once: true
 
   - name: "Writing on-prem device facts from {{inventory_hostname}} to file"
-    tags: [facts, phase1]
+    tags: [ facts ]
     copy:
       content: "{{ hostvars['cv_server'].facts_devices.data.cvp_devices |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_devices.yaml"
     delegate_to: localhost
   - name: "Writing on-prem container facts from {{inventory_hostname}} to file"
-    tags: [facts, phase1]
+    tags: [ facts ]
     copy:
       content: "{{ hostvars['cv_server'].facts_devices.data.cvp_containers |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_containers.yaml"
     delegate_to: localhost
   - name: "Writing on-prem configlet facts from {{inventory_hostname}} to file"
-    tags: [facts, phase1]
+    tags: [ facts ]
     copy:
       content: "{{ hostvars['cv_server'].facts_devices.data.cvp_configlets |  to_nice_yaml( width=50, explicit_start=True, explicit_end=True) }}"
       dest: "{{ cv_facts_dir }}/cvp_configlets.yaml"
     delegate_to: localhost
 
-- name: "Copying the CVaaS token and reconfiguring TerminAttr"
-  hosts: onprem_devices
+- name: "Copying the CVaaS token and reconfiguring TerminAttr on default vrf devices"
+  hosts: default_vrf
   vars:
     ansible_user: cvpadmin
-    ansible_password: arastra
+    ansible_password: arista123 # TO BE CHANGED
     ansible_connection: network_cli
     ansible_httpapi_use_ssl: True
     ansible_httpapi_validate_certs: False
@@ -133,17 +133,46 @@
     ansible_python_interpreter: $(which python3)
   tasks:
   - name: Copy CVaaS token
-    tags: [build, phase1]
+    tags: [ deploy ]
     net_put:
-       src: "./cv-onboarding-token"
-       dest: "/tmp/cv-onboarding-token"
+      src: "./cv-onboarding-token"
+      dest: "/tmp/cv-onboarding-token"
   - name: "Configuring TerminAttr on {{ inventory_hostname }}"
+    tags: [ deploy ]
     eos_command:
       commands:
         - "enable"
         - "config"
         - "daemon TerminAttr"
-        - "exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-staging.corp.arista.io:443 -cvcompression=gzip -cvvrf=MGMT -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -cvgnmi"
+        - "exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -disableaaa -cvcompression=gzip -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
+        - "shut"
+        - "no shut"
+
+- name: "Copying the CVaaS token and reconfiguring TerminAttr on MGMT vrf devices"
+  hosts: mgmt_vrf
+  vars:
+    ansible_user: cvpadmin
+    ansible_password: arista123 # TO BE CHANGED
+    ansible_connection: network_cli
+    ansible_httpapi_use_ssl: True
+    ansible_httpapi_validate_certs: False
+    ansible_network_os: eos
+    ansible_httpapi_port: 443
+    ansible_python_interpreter: $(which python3)
+  tasks:
+  - name: Copy CVaaS token
+    tags: [ deploy ]
+    net_put:
+      src: "./cv-onboarding-token"
+      dest: "/tmp/cv-onboarding-token"
+  - name: "Configuring TerminAttr on {{ inventory_hostname }}"
+    tags: [ deploy ]
+    eos_command:
+      commands:
+        - "enable"
+        - "config"
+        - "daemon TerminAttr"
+        - "exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -disableaaa -cvcompression=gzip -cvvrf=MGMT -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
         - "shut"
         - "no shut"
 
@@ -156,33 +185,33 @@
       terminattr_config_cvaas: "{{lookup('file', 'terminattr.cfg')}}"
   tasks:
   - name: "Push config to {{inventory_hostname}}"
-    tags: [cvaas, phase2]
+    tags: [ deploy ]
     arista.cvp.cv_configlet_v3:
       configlets: "{{hostvars['cv_server'].facts_devices.data.cvp_configlets}}"
       state: present
     delegate_to: cvaas
   - name: "Push new TerminAttr configlet"
-    tags: [cvaas, phase2]
+    tags: [ deploy ]
     arista.cvp.cv_configlet_v3:
       configlets: "{{CVP_CONFIGLETS}}"
       state: present
     delegate_to: cvaas
-  - name: "Append TerminAttr config to device facts"
-    tags: [cvaas, phase2]
-    set_fact:
-      new_devices_var: |
-        {% set res = hostvars['cv_server'].facts_devices.data.cvp_devices -%}
-        {% for device in res -%}
-        {%     do device.configlets.append("terminattr_config_cvaas") -%}
-        {%- endfor %}
-        {{ res }}
+  # - name: "Append TerminAttr config to device facts"
+  #   tags: [ deploy ]
+  #   set_fact:
+  #     new_devices_var: |
+  #       {% set res = hostvars['cv_server'].facts_devices.data.cvp_devices -%}
+  #       {% for device in res -%}
+  #       {%     do device.configlets.append("terminattr_config_cvaas") -%}
+  #       {%- endfor %}
+  #       {{ res }}
   - name: "Generate container hierarchy"
-    tags: [cvaas, phase2]
+    tags: [ deploy ]
     arista.cvp.cv_container_v3:
       topology: "{{hostvars['cv_server'].facts_devices.data.cvp_containers}}"
       state: present
   - name: "Move devices to target containers and assign configlets"
-    tags: [cvaas, phase2]
+    tags: [ deploy ]
     arista.cvp.cv_device_v3:
       devices: "{{new_devices_var}}"
       state: present
