--- a/terminattr_default_vrf.cfg
+++ b/terminattr_default_vrf.cfg
@@ -1,3 +1,3 @@
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvopt CVaaS.addr=www.arista.io:443 -cvopt CVaaS.auth=token-secure,/tmp/cvaas-token -disableaaa -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -disableaaa -cvcompression=gzip -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent
    no shutdown
