--- a/cvaas_migrationV2.yaml
+++ b/cvaas_migrationV2.yaml
@@ -1,15 +1,15 @@
-# This playbook is aimed to migrate all the devices, configlets and containers from an on-prem CVP to CVaaS
+---
+# This playbook is aimed to migrate devices, configlets and containers from an on-prem CVP to CVaaS in multiple steps
 # Author: Philippe Bureau
-# This playbook was modifed from the main branch to accomodate environments with different TerminAttr configs
+# This playbook was modifed from the main branch to allow multi-step migration
+
 - name: "Fetch CV on-prem device inventory and generate CVaaS onboarding token"
   hosts: cv_server
   connection: local
   gather_facts: no
   vars:
-    cvaas_api: https://www.cv-prod-na-northeast1-b.arista.io/api/v3/services/admin.Enrollment/AddEnrollmentToken # change the URL to the right CVaaS instance
-    cvaas_token: "{{lookup('file', '~/cvaas_arista_ce_canada.tok')}}"
-    cvp_device_api: "https://10.18.156.165/cvpservice/inventory/devices?provisioned=true" # change the IP to the right CVP On-prem instance
-    cvp_token: "{{lookup('file', '~/ACT_AVD_CI_EXTENDED.tok')}}"
+    cvaas_api: "{{ 'https://' ~ cvaas_host ~ '/api/v3/services/admin.Enrollment/AddEnrollmentToken' }}"
+    cvp_device_api: "{{ 'https://' ~ cvp_onprem_host ~ '/cvpservice/inventory/devices?provisioned=true' }}"
   tasks:
   - name: 'Collect devices facts from {{inventory_hostname}}'
     tags: [ facts ]
@@ -123,8 +123,8 @@
 - name: "Copying the CVaaS token and reconfiguring TerminAttr on default vrf devices"
   hosts: default_vrf
   vars:
-    ansible_user: cvpadmin
-    ansible_password: arista123 # TO BE CHANGED
+    # ansible_user: cvpadmin # Change to match devices user
+    # ansible_password: arista123 # Change to match devices password
     ansible_connection: network_cli
     ansible_httpapi_use_ssl: True
     ansible_httpapi_validate_certs: False
@@ -144,15 +144,15 @@
         - "enable"
         - "config"
         - "daemon TerminAttr"
-        - "exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -disableaaa -cvcompression=gzip -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
+        - "{{ terminattr_config }}"
         - "shut"
         - "no shut"
 
 - name: "Copying the CVaaS token and reconfiguring TerminAttr on MGMT vrf devices"
-  hosts: mgmt_vrf
+  hosts: "{{ deploy_target }}"
   vars:
-    ansible_user: cvpadmin
-    ansible_password: arista123 # TO BE CHANGED
+    ansible_user: cvpadmin # Change to match devices password
+    ansible_password: arista123 # Change to match devices password
     ansible_connection: network_cli
     ansible_httpapi_use_ssl: True
     ansible_httpapi_validate_certs: False
