--- a/inventory/group_vars/CVP.yml
+++ b/inventory/group_vars/CVP.yml
@@ -13,4 +13,4 @@ ansible_password: arista123                                       # Change to ma
 terminattr_config: "exec /usr/bin/TerminAttr -cvaddr=apiserver.cv-prod-na-northeast1-b.arista.io:443 -disableaaa -cvcompression=gzip -taillogs -cvauth=token-secure,/tmp/cv-onboarding-token -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
 
 # Deployment variables
-deploy_target: group1                                             # EOS targets defined in 
+deploy_target: group1                                             # EOS targets defined in inventory/onprem_devices.yaml
